edit carrousel, color background

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body style="background-color: #f9f9f9;">
   <header>
     <form class="form-inline">
       <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar na web" aria-label="Pesquisar">
@@ -127,7 +127,7 @@
 
   <div class="d-flex noticias">
 
-    <div id="carouselExampleCaptions" class="carousel slide carousel-img" data-bs-ride="carousel">
+    <div id="carouselExampleCaptions" class="carousel slide carousel-img m-3" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
           aria-current="true" aria-label="Slide 1"></button>
@@ -155,7 +155,7 @@
             <h3>Séries que renderam filmes; uma ótima ideia ou 'forçação' de barra?</h3>
           </div>
         </div>
-      </div>
+      
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
         data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -167,22 +167,23 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
+  </div>
 
-    <div class="cardinho shadow" style="width: 18rem;">
+    <div class="cardinho shadow m-3" style="width: 18rem;">
       <img class="card-img-top2" src="./img/vihh-tube-site.jfif" alt="Card image cap">
       <div class="card-body">
         <p class="card-texxt">'BBB 21': mãe de Viih Tube opina sobre Juliette: 'Nem é querida e gruda nas pessoas'</p>
       </div>
     </div>
 
-    <div class="cardinho shadow" style="width: 18rem;">
+    <div class="cardinho shadow m-3" style="width: 18rem;">
       <img class="card-img-top2" src="./img/torta-oreo-site.jfif" alt="Card image cap">
       <div class="card-body">
         <p class="card-texxt">Torta Oreo® fácil e saborosa para uma sobremesa inesquecível</p>
       </div>
     </div>
 
-    <div class="cardinho shadow" style="width: 18rem;">
+    <div class="cardinho shadow m-3" style="width: 18rem;">
       <img class="card-img-top2" src="./img/time-de-fut-site.jfif" alt="Card image cap">
       <div class="card-body">
         <p class="card-texxt">As curiosas multas do Bayern de Munique aos seus jogadores que quebrarem regras 'básicas'
@@ -190,42 +191,42 @@
       </div>
     </div>
 
-    <div class="cardinho shadow" style="width: 18rem;">
+    <div class="cardinho shadow m-3" style="width: 18rem;">
       <img class="card-img-top2" src="./img/chuva-de-garrafas-site.jfif" alt="Card image cap">
       <div class="card-body">
         <p class="card-texxt">PM leva chuva de garrafas em baile funk que infernizava vizinhança</p>
       </div>
     </div>
 
-    <div class="cardinho shadow" style="width: 18rem;">
+    <div class="cardinho shadow m-3" style="width: 18rem;">
       <img class="card-img-top2" src="./img/submarino-site.jfif" alt="Card image cap">
       <div class="card-body">
         <p class="card-texxt">Indonésia: submarino é encontrado com todos os 53 tripulantes mortos</p>
       </div>
     </div>
 
-    <div class="cardinho shadow" style="width: 18rem;">
+    <div class="cardinho shadow m-3" style="width: 18rem;">
       <img class="card-img-top2" src="./img/lua-site.jfif" alt="Card image cap">
       <div class="card-body">
         <p class="card-texxt">O que explica o fenômeno da “Superlua Rosa”?</p>
       </div>
     </div>
 
-    <div class="cardinho shadow" style="width: 18rem;">
+    <div class="cardinho shadow m-3" style="width: 18rem;">
       <img class="card-img-top2" src="./img/bedida-site.jfif" alt="Card image cap">
       <div class="card-body">
         <p class="card-texxt">Beber Black Label com água altera o sabor do whisky escocês?</p>
       </div>
     </div>
 
-    <div class="cardinho shadow" style="width: 18rem;">
+    <div class="cardinho shadow m-3" style="width: 18rem;">
       <img class="card-img-top2" src="./img/ferrari-site.jfif" alt="Card image cap">
       <div class="card-body">
         <p class="card-texxt">Ferrari abandonada por 55 anos deve atingir R$ 14 milhões em leilão</p>
       </div>
     </div>
 
-    <div class="cardinho shadow" style="width: 18rem;">
+    <div class="cardinho shadow m-3" style="width: 18rem;">
       <img class="card-img-top2" src="./img/motorista-site.jfif" alt="Card image cap">
       <div class="card-body">
         <p class="card-texxt">Senado aprova projeto que obriga motorista bêbado que causar acidente com vítimas a
@@ -234,21 +235,21 @@
       </div>
     </div>
 
-    <div class="cardinho shadow" style="width: 18rem;">
+    <div class="cardinho shadow m-3" style="width: 18rem;">
       <img class="card-img-top2" src="./img/pás-eólicas-site.jfif" alt="Card image cap">
       <div class="card-body">
         <p class="card-texxt">Fabricante de pás eólicas Aeris anuncia Bruno Vilela Cunha como novo CEO</p>
       </div>
     </div>
 
-    <div class="cardinho shadow" style="width: 18rem;">
+    <div class="cardinho shadow m-3" style="width: 18rem;">
       <img class="card-img-top2" src="./img/camera-site.webp" alt="Card image cap">
       <div class="card-body">
         <p class="card-texxt">O único alarme que detecta o intruso antes do roubo</p>
       </div>
     </div>
 
-    <div class="cardinho shadow" style="width: 18rem;">
+    <div class="cardinho shadow m-3" style="width: 18rem;">
       <img class="card-img-top2" src="./img/ferrari-abandona-site.jpg" alt="Card image cap">
       <div class="card-body">
         <p class="card-texxt">Os Piores Carros Já Fabricados O Farão Repensar Suas Opções De Compra</p>
